unpackaged/main/default/objects/nbavs__SecurePayment__c/nbavs__SecurePayment__c.object-meta.xml
<CustomObject>
    <label>Secure Payment</label>
    <nameField>
        <label>Reference Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Secure Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>