unpackaged/main/default/objects/nbavs__SecurePayment__c/fields/nbavs__Amount__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Amount__c</fullName>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>