unpackaged/main/default/objects/nbavs__SecurePayment__c/fields/nbavs__AttemptCount__c.field-meta.xml
<CustomField>
    <fullName>nbavs__AttemptCount__c</fullName>
    <label>AttemptCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>