unpackaged/main/default/objects/nbavs__SecurePayment__c/fields/nbavs__Contact__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Secure Payments</relationshipLabel>
    <relationshipName>Secure_Payments_del</relationshipName>
    <type>Lookup</type>
</CustomField>