unpackaged/main/default/objects/nbavs__SecurePayment__c/fields/nbavs__Currency__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Currency__c</fullName>
    <label>Currency</label>
    <length>32</length>
    <type>Text</type>
</CustomField>