unpackaged/main/default/objects/nbavs__SecurePayment__c/fields/nbavs__decision__c.field-meta.xml
<CustomField>
    <fullName>nbavs__decision__c</fullName>
    <label>Decision</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACCEPT</fullName>
            </value>
            <value>
                <fullName>REJECT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>