unpackaged/main/default/objects/nbavs__SecurePayment__c/fields/nbavs__ErrorCount__c.field-meta.xml
<CustomField>
    <fullName>nbavs__ErrorCount__c</fullName>
    <label>ErrorCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>