unpackaged/main/default/objects/nbavs__SecurePayment__c/fields/nbavs__Errors__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Errors__c</fullName>
    <label>Errors</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>