unpackaged/main/default/objects/nbavs__SecurePayment__c/fields/nbavs__FailureCount__c.field-meta.xml
<CustomField>
    <fullName>nbavs__FailureCount__c</fullName>
    <label>FailureCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>