unpackaged/main/default/objects/nbavs__SecurePayment__c/fields/nbavs__Initial_Data__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Initial_Data__c</fullName>
    <label>Initial Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>