unpackaged/main/default/objects/nbavs__SecurePayment__c/fields/nbavs__reasonCode__c.field-meta.xml
<CustomField>
    <fullName>nbavs__reasonCode__c</fullName>
    <label>reasonCode</label>
    <length>18</length>
    <type>Text</type>
</CustomField>