unpackaged/main/default/objects/nbavs__SecurePayment__c/fields/nbavs__reasonText__c.field-meta.xml
<CustomField>
    <fullName>nbavs__reasonText__c</fullName>
    <label>reasonText</label>
    <length>255</length>
    <type>Text</type>
</CustomField>