unpackaged/main/default/objects/nbavs__SecurePayment__c/fields/nbavs__requestID__c.field-meta.xml
<CustomField>
    <fullName>nbavs__requestID__c</fullName>
    <externalId>true</externalId>
    <label>AuthCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>