unpackaged/main/default/objects/nbavs__SecurePayment__c/fields/nbavs__Response_Data__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Response_Data__c</fullName>
    <label>Response Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>