unpackaged/main/default/objects/nbavs__SecurePayment__c/fields/nbavs__Secure_Pay_Form__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Secure_Pay_Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secure Pay Form</label>
    <referenceTo>nbavs__SecurePayForm__c</referenceTo>
    <relationshipLabel>Secure Payments</relationshipLabel>
    <relationshipName>Secure_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>