unpackaged/main/default/objects/nbavs__SecurePayment__c/fields/nbavs__SessionId__c.field-meta.xml
<CustomField>
    <fullName>nbavs__SessionId__c</fullName>
    <externalId>true</externalId>
    <label>Session Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>