unpackaged/main/default/objects/nbavs__SecurePayment__c/fields/nbavs__SuccessCount__c.field-meta.xml
<CustomField>
    <fullName>nbavs__SuccessCount__c</fullName>
    <label>SuccessCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>